unpackaged/main/default/objects/CampaignMember/fields/Booth__c.field-meta.xml
<CustomField>
    <fullName>Booth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booth</label>
    <referenceTo>Oracle_Show_Booth__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>