unpackaged/main/default/objects/CampaignMember/fields/Booth_Exhibitor_Status_2__c.field-meta.xml
<CustomField>
    <fullName>Booth_Exhibitor_Status_2__c</fullName>
    <formula>Booth__r.EXHIBITOR_STATUS2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Exhibitor Status 2</label>
    <type>Text</type>
</CustomField>