unpackaged/main/default/objects/CampaignMember/fields/Booth_Exhibitor_Status_4__c.field-meta.xml
<CustomField>
    <fullName>Booth_Exhibitor_Status_4__c</fullName>
    <formula>Booth__r.EXHIBITOR_STATUS4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Exhibitor Status 4</label>
    <type>Text</type>
</CustomField>