unpackaged/main/default/objects/CampaignMember/fields/Booth_Exhibitor_Status_5__c.field-meta.xml
<CustomField>
    <fullName>Booth_Exhibitor_Status_5__c</fullName>
    <formula>Booth__r.EXHIBITOR_STATUS5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Exhibitor Status 5</label>
    <type>Text</type>
</CustomField>