unpackaged/main/default/objects/CampaignMember/fields/Booth_Length__c.field-meta.xml
<CustomField>
    <fullName>Booth_Length__c</fullName>
    <formula>Booth__r.BOOTH_LENGTH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>