unpackaged/main/default/objects/CampaignMember/fields/Booth_Size__c.field-meta.xml
<CustomField>
    <fullName>Booth_Size__c</fullName>
    <formula>Booth__r.BOOTH_SIZE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>