unpackaged/main/default/objects/CampaignMember/fields/Booth_Type__c.field-meta.xml
<CustomField>
    <fullName>Booth_Type__c</fullName>
    <formula>Booth__r.BOOTH_TYPE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Type</label>
    <type>Text</type>
</CustomField>