unpackaged/main/default/objects/CampaignMember/fields/Booth_Width__c.field-meta.xml
<CustomField>
    <fullName>Booth_Width__c</fullName>
    <formula>Booth__r.BOOTH_WIDTH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>