unpackaged/main/default/objects/CampaignMember/fields/Contacts_Acct_Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Acct_Owner_Alias__c</fullName>
    <formula>Contact.Account.Owner.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact&#39;s Acct Owner Alias</label>
    <type>Text</type>
</CustomField>