unpackaged/main/default/objects/CampaignMember/fields/Exhibitor__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to tie Booth to Campaign Member, when Show Booth Contacts are added as Campaign Members in a Campaign</description>
    <label>Exhibitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>