unpackaged/main/default/objects/CampaignMember/fields/Exhibitor_Acct_Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Acct_Owner_Alias__c</fullName>
    <formula>Exhibitor__r.Owner.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibitor Acct Owner Alias</label>
    <type>Text</type>
</CustomField>