unpackaged/main/default/objects/CampaignMember/fields/Lead_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contact_ID__c</fullName>
    <formula>IF(ISBLANK(Contact.Id), LeadId , Contact.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Contact ID</label>
    <type>Text</type>
</CustomField>