unpackaged/main/default/objects/CampaignMember/fields/Member_Owner__c.field-meta.xml
<CustomField>
    <fullName>Member_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assigned User for this Campaign Member</inlineHelpText>
    <label>Member Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>