unpackaged/main/default/objects/CampaignMember/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Contact is a Primary Contact for the Booth. This will be true if Contact is marked Primary in Show Workbench in CORE.</description>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>