unpackaged/main/default/objects/CampaignMember/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Indicates what stage a Sales Rep is in for a specific call</description>
    <label>Follow Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Call</fullName>
                <label>1st Call</label>
            </value>
            <value>
                <fullName>Second Call</fullName>
                <label>2nd Call</label>
            </value>
            <value>
                <fullName>3rd Call</fullName>
            </value>
            <value>
                <fullName>Contacted - Follow up needed</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
            <value>
                <fullName>LinkedIn Message</fullName>
            </value>
            <value>
                <fullName>Not Yet Contacted</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Qualified - Special</fullName>
            </value>
            <value>
                <fullName>Referred to Logistics</fullName>
            </value>
            <value>
                <fullName>Referred to Pre Show Coordinator</fullName>
            </value>
            <value>
                <fullName>Referred to Trade Show Lead Gen</fullName>
            </value>
            <value>
                <fullName>Sold Exhibit System</fullName>
            </value>
            <value>
                <fullName>Sold Kit Items</fullName>
            </value>
            <value>
                <fullName>2nd Email</fullName>
            </value>
            <value>
                <fullName>3rd Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>