unpackaged/main/default/objects/CampaignMember/recordTypes/Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Member</fullName>
    <active>true</active>
    <description>Default Campaign Member Record Type</description>
    <label>Campaign Member</label>
</RecordType>